--- a/app/src/main/res/layout/activity_pose.xml
+++ b/app/src/main/res/layout/activity_pose.xml
@@ -36,7 +36,7 @@
             android:elevation="4dp"
             android:textAlignment="center" />
 
-        <!-- Feedback TextView overlayed on top of camera -->
+        <!-- Feedback TextView -->
         <TextView
             android:id="@+id/feedbackTextView"
             android:layout_width="wrap_content"
@@ -54,27 +54,46 @@
 
     </FrameLayout>
 
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:gravity="center"
         android:orientation="horizontal"
-        android:layout_margin="16dp">
+        android:background="#000000"
+        android:padding="16dp">
 
-        <Button
-            android:id="@+id/resetCounterButton"
-            android:layout_width="0dp"
+        <!-- Camera and Flip Button -->
+        <RelativeLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:layout_marginEnd="8dp"
-            android:text="@string/reset_counter" />
+            android:layout_margin="16dp">
 
-        <Button
-            android:id="@+id/flipCameraButton"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:layout_marginStart="8dp"
-            android:text="Flip Camera" />
+            <ImageButton
+                android:id="@+id/resetCounterButton"
+                android:layout_width="64dp"
+                android:layout_height="64dp"
+                android:background="@drawable/circular_white_background"
+                android:src="@drawable/resetbutton"
+                android:scaleType="centerInside"
+                android:padding="12dp"
+                android:layout_alignParentStart="true"
+                android:contentDescription="Reset Counter" />
+
+            <ImageButton
+                android:id="@+id/flipCameraButton"
+                android:layout_width="64dp"
+                android:layout_height="64dp"
+                android:background="@drawable/circular_white_background"
+                android:src="@drawable/cameraflip"
+                android:scaleType="centerInside"
+                android:padding="12dp"
+                android:layout_alignParentEnd="true"
+                android:contentDescription="Flip Camera" />
+
+        </RelativeLayout>
+
+
 
     </LinearLayout>
 
