Improved Camera UI Buttons

--- a/app/src/main/res/layout/activity_pose.xml
+++ b/app/src/main/res/layout/activity_pose.xml
@@ -43,7 +43,7 @@
         android:maxLines="5"
         android:textAlignment="center" />
 
-
+    <!-- Image Button Added -->
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
