--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -74,6 +74,7 @@
         android:background="#0F045D"
         android:orientation="horizontal"
         android:gravity="center"
+        android:fitsSystemWindows="true"
         app:layout_constraintBottom_toBottomOf="parent">
 
         <ImageView
