--- a/app/src/main/res/layout/activity_squat_article.xml
+++ b/app/src/main/res/layout/activity_squat_article.xml
@@ -64,7 +64,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="🦵 What Are Squats?"
+                android:text="What Are Squats?"
                 android:textColor="#FFFFFF"
                 android:textStyle="bold"
                 android:textSize="18sp"
@@ -82,7 +82,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="✔️ Benefits:"
+                android:text="Benefits:"
                 android:textColor="#FFFFFF"
                 android:textStyle="bold"
                 android:textSize="18sp"
@@ -100,7 +100,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="⚠️ Common Mistakes to Avoid:"
+                android:text="Common Mistakes to Avoid:"
                 android:textColor="#FFFFFF"
                 android:textStyle="bold"
                 android:textSize="18sp"
@@ -124,6 +124,7 @@
         android:background="#0F045D"
         android:orientation="horizontal"
         android:gravity="center"
+        android:fitsSystemWindows="true"
         app:layout_constraintBottom_toBottomOf="parent">
 
         <ImageView
